<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

    android:orientation="vertical"

    tools:context=".MainActivity"
    android:background="@color/myColor">

    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
        <EditText
        android:id="@+id/inputF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Fahrenheit"
            android:text="@string/fahrenheit"
        />
    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/inputC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"

            android:inputType="numberSigned|numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Celsius"
            android:text="@string/celsius" />
    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/inputK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"

            android:inputType="numberSigned|numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Kelvin"
            android:text="@string/kelvin" />
    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/inputR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"

            android:inputType="numberSigned|numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Rankine"
            android:text="@string/rankine" />
    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/radioGroup1"
        android:layout_below="@+id/radioGroup1"
        android:layout_marginTop="22dp"
        android:text="@string/reset"
        android:layout_gravity="center_horizontal"
        android:onClick="onClick"/>
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locate"
        android:layout_gravity="center_horizontal"
        android:onClick="onClick"/>

</LinearLayout>